# f_ai_m01_w01_lab01

./: .env.example  README.md  pyproject.toml  requirements.txt
